# mepris

./: Cargo.toml  README.md
.github/workflows/: docs.yml  main.yml  release.yml
docs/: docusaurus.config.ts  package-lock.json
docs/docs/: intro.md  usage.md
docs/docs/configuration/: config-structure.md  dependencies.md  examples.md  filtering.md  package-aliases.md
src/: check_script.rs  cli.rs  helpers.rs  lib.rs  main.rs  os_info.rs  parser.rs  runner.rs  shell.rs  state.rs
src/commands/: completion.rs  list_steps.rs  list_tags.rs  mod.rs  resume.rs  run.rs  utils.rs  validate.rs
src/commands/utils/: filters.rs  mod.rs  sort.rs
src/completions/: custom.bash  custom.fish  custom.nu  custom.ps1  custom.zsh
src/config/: alias.rs  aliases.rs  expr.pest  expr.rs  mod.rs  os_expr.pest  parser.rs  steps.rs  validate.rs
src/config/expr/: mod.rs  os.rs  tags.rs
src/logging/: mod.rs  test.rs
src/runner/: dry.rs  interactive.rs  logger.rs  mod.rs  pkg.rs  script.rs  script_checker.rs
src/system/: mod.rs  os_info.rs  pkg.rs  shell.rs
src/system/pkg/: mod.rs  parsers.rs
src/utils/: file.rs  graph.rs  mod.rs  test.rs  vec.rs
tests/: list_steps.rs  list_tags.rs  resume.rs  run_aliases.rs  run_env.rs  run_steps_filter.rs
tests/fixtures/: choco.txt  npm.txt  scoop.txt  winget.txt
