[package]
name = "mepris"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
colored = "3.0.0"
directories = "6.0.0"
pest = "2.8.1"
pest_derive = "2.8.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_yaml = "0.9.34"
tempfile = "3.20.0"
which = "8.0.0"
strum = "0.27"
strum_macros = "0.27"
blake3 = "1.8.2"
once_cell = "1.21.3"
